--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
-  branch: master
+  branch: main
+    repo: rsuppersahabatan/app
   commit_messages:
     create: 'Create {{collection}} “{{slug}}”'
     update: 'Update {{collection}} “{{slug}}”'
@@ -10,6 +11,10 @@ backend:
 
 media_folder: 'static/media'
 public_folder: '/media'
+
+logo_url: https://pendaftaran.rsuppersahabatan.co.id/favicon-32x32.png
+site_url: https://app.rsuppersahabatan.co.id/
+display_url: https://app.rsuppersahabatan.co.id/
 
 editor:
      preview: false
